2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkrgb.c, rbgdkpixmap.c, rbgdkselection.c,
	rbgtkselectiondata.c, rbgtkcontainer.c, rbgdkproperty.c,
	rbgtkwidget.c, rbgdkgc.c: Fix compiling warning. 

2005-07-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/sample.rb, wmhints.rb, toolbar.rb, 
	tooltips.rb, testgtk.rb, statusbar.rb: 
	Code clean up. Apply Gtk::Window.new(title). 
	* tree_minus.xbm, tree_minus.xpm, tree_plus.xbm, tree_plus.xpm, 
	line-arrow.xbm, line-wrap.xbm, circles.xpm: Removed.

2005-07-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/shapedwindow.rb, scrolledwindow.rb, 
	savedposition.rb: Code clean up. Apply Gtk::Window.new(title).

2005-07-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/testgtk/gammacurve.rb, filesel.rb, entry.rb, sample.rb, 
	shapedwindow.rb, colorselect.rb, testgtk.rb, rulers.rb, 
	reparent.rb, range.rb,radiobutton.rb, checkbutton.rb, 
	progressbar.rb, pixmap.rb, notebook.rb, menu.rb, button.rb: 
	Code clean up. Apply Gtk::Window.new(title). 
	* src/rbgtkdialog.c: Fixed wrong argument number of Gtk::Dialog.new. 
	* sample/testgtk/colorpreview.rb, cursors.rb, dnd.rb, handlebox.rb, 
	liststore.rb, mainloop.rb, panes.rb, graypreview.rb, idle.rb, 
	scroll.rb, treestore.rb: Removed.

2005-07-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/xbm_cursor.rb, window.rb, uimanager.rb, uimanager2.rb,
	toolbar.rb, togglebutton.rb, to_drawable.rb, threads.rb, 
	style_property.rb, stock.rb, radiobutton.rb, pointer_grab.rb,
	pangorenderer.rb, menu.rb: Code clean up. Apply Gtk::Window.new(title). 
	* sample/misc/t-gtkplug.rb, t-gtksocket.rb, to_drawable.rb: 
	Works again. Code clean up. Apply Gtk::Window.new(title). 
	* src/rbgdkpixbuf.c: Fix a warning message of Gdk::Pixbuf#render_to_drawable.

2005-07-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/bindings.rb, calender.rb, checkbutton.rb, colorselection.rb, 
	combo_check.rb, dialog2.rb, dnd.rb, dndtreeview.rb, drawing.rb, entry.rb, 