@@ -1,3 +1,8 @@
+2005-07-28  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* sample/gtk-demo/clipboard.rb, changedisplay.rb: Work only GTK+-2.2.x or later.
+	* sample/gtk-demo/main.rb: Support ruby-1.6.x again.
+
 2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgdkrgb.c, rbgdkpixmap.c, rbgdkselection.c,
